--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,15 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "baseUrl": "./src",
+    "paths": {
+      "@/*": ["./src/*"],
+      "@shared/*": ["shared/*"],
+      "@components/*": ["components/*"],
+      "@assets/*": ["assets/*"],
+      "@types/*": ["types/*"]
+    }
   },
-  "include": ["src", "src/types/*"]
+  "include": ["src"]
 }
